argocd/garmin/manifests/deploy.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: garmin-fetch
  labels:
    app: garmin-fetch
spec:
  serviceName: garmin-fetch
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: garmin-fetch
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: garmin-fetch
    spec:
      containers:
        - image: thisisarpanghosh/garmin-fetch-data:latest
          imagePullPolicy: IfNotPresent
          name: garmin-fetch
          volumeMounts:
            - mountPath: /home/appuser/.garminconnect
              name: garmin-data
  volumeClaimTemplates:
    - metadata:
        name: garmin-data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: longhorn
        resources:
          requests:
            storage: 10Mi
