argocd/garmin/manifests/sts.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: garmin-fetch
  labels:
    app: garmin-fetch
spec:
  serviceName: garmin-fetch
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: garmin-fetch
  template:
    metadata:
      labels:
        app: garmin-fetch
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - image: harbor.yanello.net/ghcr/arpanghosh8453/garmin-fetch-data:latest@sha256:3282b5144f23a8b9e96e4593a03f50914add28c5d837e4ef529781d45ee7cba7
          imagePullPolicy: IfNotPresent
          name: garmin-fetch
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
          # env:
            # - name: MANUAL_START_DATE
              # value: "2025-06-01"
          volumeMounts:
            - mountPath: /home/appuser/.garminconnect
              name: garmin-data
          resources:
            requests:
              memory: 128Mi
            limits:
              memory: 192Mi
  volumeClaimTemplates:
    - apiVersion: v1
      kind: PersistentVolumeClaim
      metadata:
        name: garmin-data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: truenas-ssd-nfs
        resources:
          requests:
            storage: 1Gi
